ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/octalLiteralInStrictModeES3/input.ts.stderr
error: Legacy octal literals are not available when targeting ECMAScript 5 and higher
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/octalLiteralInStrictModeES3/input.ts:2:1
  |
2 | 03;
  | ^^

error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/octalLiteralInStrictModeES3/input.ts:2:1
  |
2 | 03;
  | ^^

